# datasets18xx

./: .gitignore  BACKLOG.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test_pytest.yml
datasets18xx/: __init__.py  cli.py  pipeline.py
datasets18xx/core/: config.py  context_manager.py  dataset.py
datasets18xx/io/: database.py  io.py  local.py
datasets18xx/utils/: mplog.py  pooling.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  reference.rst  usage.rst
scripts/: cli.py
tests/: context.py
tests/resources/1830/1830_179003/: 1830_179003.txt  1830_179003_final.csv  1830_179003_metadata.json
tests/resources/1830/1830_179005/: 1830_179005.txt  1830_179005_final.csv  1830_179005_metadata.json
tests/resources/1830/1830_179051/: 1830_179051.txt  1830_179051_final.csv  1830_179051_metadata.json
tests/resources/1830/1830_179090/: 1830_179090.txt  1830_179090_final.csv  1830_179090_metadata.json
tests/resources/1830/1830_179140/: 1830_179140.txt  1830_179140_final.csv  1830_179140_metadata.json
tests/resources/1830/1830_179158/: 1830_179158.txt  1830_179158_final.csv  1830_179158_metadata.json
tests/resources/1830/1830_179171/: 1830_179171.txt  1830_179171_final.csv  1830_179171_metadata.json
tests/resources/1830/1830_179175/: 1830_179175.txt  1830_179175_final.csv  1830_179175_metadata.json
tests/resources/1830/1830_179190/: 1830_179190.txt  1830_179190_final.csv  1830_179190_metadata.json
tests/test_core/: test_config.py  test_dataset.py
(+30 files in other folders)
